--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -556,4 +556,6 @@ add_library(Sugar STATIC
         Exceptions/Compilation/Analysis/Local/initialisation_exception.h
         Exceptions/Compilation/Analysis/Local/constant_expected_exception.cpp
         Exceptions/Compilation/Analysis/Local/constant_expected_exception.h
+        Analysis/Structure/Context/Expressions/pop_expression.cpp
+        Analysis/Structure/Context/Expressions/pop_expression.h
 )
